[package]
name = "agile-ante"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
mime_guess = "2.0.5"
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
