[package]
name = "agile-ante"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-stream = "0.3.6"
axum = "0.8.1"
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
dotenvy = "0.15.7"
futures = "0.3.31"
mime_guess = "2.0.5"
reqwest = { version = "0.12.15", features = ["json"] }
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["serde", "v4"] }


[dev-dependencies]
reqwest = "0.12.15"
